--- a/java/res/values-rm/strings.xml
+++ b/java/res/values-rm/strings.xml
@@ -310,9 +310,33 @@
     <skip />
     <!-- no translation found for button_default (3988017840431881491) -->
     <skip />
-    <!-- no translation found for language_settings (1671153053201809031) -->
+    <!-- no translation found for setup_welcome_title (6112821709832031715) -->
     <skip />
-    <!-- no translation found for select_input_method (4301602374609275003) -->
+    <!-- no translation found for setup_welcome_additional_description (8150252008545768953) -->
+    <skip />
+    <!-- no translation found for setup_start_action (8936036460897347708) -->
+    <skip />
+    <!-- no translation found for setup_steps_title (6400373034871816182) -->
+    <skip />
+    <!-- no translation found for setup_step1_title (3147967630253462315) -->
+    <skip />
+    <!-- no translation found for setup_step1_instruction (2578631936624637241) -->
+    <skip />
+    <!-- no translation found for setup_step1_action (4341732946935754009) -->
+    <skip />
+    <!-- no translation found for setup_step2_title (6860725447906690594) -->
+    <skip />
+    <!-- no translation found for setup_step2_instruction (1696017456983062415) -->
+    <skip />
+    <!-- no translation found for setup_step2_action (2945283990796496485) -->
+    <skip />
+    <!-- no translation found for setup_step3_title (3154757183631490281) -->
+    <skip />
+    <!-- no translation found for setup_step3_instruction (8025981829605426000) -->
+    <skip />
+    <!-- no translation found for setup_step3_action (600879797256942259) -->
+    <skip />
+    <!-- no translation found for setup_finish_action (276559243409465389) -->
     <skip />
     <!-- no translation found for app_name (6320102637491234792) -->
     <skip />
